sign up: jumping back arrow placed on a fixed point when hovering

--- a/styles/log_in.css
+++ b/styles/log_in.css
@@ -396,16 +396,21 @@ a {
     color: white;
     padding: 8px 8px;
     cursor: pointer;
-    transform: scale(1);
     font-size: 12px;
     margin-left: 16px;
+    transition: background-color 100ms ease-in-out,
+                box-shadow 100ms ease-in-out;
 }
 
 
 .sign_up_button_footer_mobile:hover {
-    border: solid 2px rgba(41, 171, 226, 1);
-    color: rgba(41, 171, 226, 1);
+    background-color: rgba(41, 171, 226, 1);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.sign_up_button_footer_mobile:active{
+    background-color: rgba(9, 25, 49, 1);
+    box-shadow: none;
 }
 
 .sign_up_div_footer_mobile p {
